--- a/index.html
+++ b/index.html
@@ -5,8 +5,165 @@
     <title>HTML Academy: Нёрдс</title>
   </head>
   <body>
+    <header class="main-header">
+      <div class="container">
+        <div class="header-top">
+          <figure class="logo">
+            <img src="http://placehold.it/150x100">
+          </figure>
+          <ul class="main-nav">
+            <li><a href="#">Студия</a></li>
+            <li><a href="#">Клиенты</a></li>
+            <li><a href="#">Магазин</a></li>
+            <li><a href="#">Контакты</a></li>
+          </ul>
+          <div class="shopping-cart">
+            <a href="#">Корзина</a>
+          </div>
+        </div>
 
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
+        <section class="promo">
+          <h1 class="promo-title">
+            Долго, дорого,<br>
+            скрупулезно.
+          </h1>
+          <p class="promo-description">
+            Математически выверенный дизайн<br>
+            для вашего сайта или мобильного приложения.
+          </p>
+          <a class="btn" href="#">Узнать больше</a>
+          <section class="promo-slider">
+            <figure class="slider-pic">
+              <img src="http://placehold.it/150x100">
+            </figure>
+            <button class="slider-btn"></button>
+            <button class="slider-btn"></button>
+            <button class="slider-btn"></button>
+          </section>
+        </section>
+      </div>
+    </header>
 
+    <main>
+      <div class="container">
+        <section class="features">
+          <article class="feature-item">
+            <figure class="feature-pic">
+              <img src="http://placehold.it/150x100">
+            </figure>
+            <h3 class="feature-title">Веб-сайты</h3>
+            <p class="feature-description">
+              Мир никогда не будет прежним<br>
+              после того, как увидит ваш сайт!
+            </p>
+            <a class="btn" href="#">Заказать</a>
+          </article>
+
+          <article class="feature-item">
+            <figure class="feature-pic">
+              <img src="http://placehold.it/150x100">
+            </figure>
+            <h3 class="feature-title">Приложения</h3>
+            <p class="feature-description">
+              Покорите топ-10 приложений в<br>
+              AppStore и Google Play
+            </p>
+            <a class="btn" href="#">Заказать</a>
+          </article>
+
+          <article class="feature-item">
+            <figure class="feature-pic">
+              <img src="http://placehold.it/150x100">
+            </figure>
+            <h3 class="feature-title">Презентации</h3>
+            <p class="feature-description">
+              Вы даже не подозреваете,<br>
+              насколько вы изумительны!
+            </p>
+            <a class="btn" href="#">Заказать</a>
+          </article>
+        </section>
+
+        <section class="about">
+          <h2 class="about-title">
+            Мы - маленькая, но гордая<br>
+            дизайн-студия из Краснодара.
+          </h2>
+          <p class="about-description">
+            Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
+            превыше креатива. Работаем не покладая рук, как роботы.
+          </p>
+
+          <section class="orders">
+            <h4 class="orders-title">Выполняем заказы на разработку:</h4>
+            <ul class="orders-list">
+              <li>Веб-сайтов любой сложности</li>
+              <li>Мобильных приложений для iOS и Android</li>
+              <li>Слайдшоу и видео для корпоративных презентаций</li>
+            </ul>
+          </section>
+
+          <section class="strengths">
+            <figure class="strengths-pic">
+              <img src="http://placehold.it/150x100">
+            </figure>
+            <h4 class="strengths-title">С 2004 года любим точность во всем:</h4>
+            <div class="strengths-item">
+              <b>146%</b>
+              <span>Уровень самоотдачи</span>
+            </div>
+            <div class="strengths-item">
+              <b>100%</b>
+              <span>Соблюдение сроков</span>
+            </div>
+            <div class="strengths-item">
+              <b>50%</b>
+              <span>Минимальная предоплата</span>
+            </div>
+          </section>
+        </section>
+
+        <section class="clients">
+          <figure class="client-pic">
+            <img src="http://placehold.it/150x100">
+          </figure>
+          <figure class="client-pic">
+            <img src="http://placehold.it/150x100">
+          </figure>
+          <figure class="client-pic">
+            <img src="http://placehold.it/150x100">
+          </figure>
+          <figure class="client-pic">
+            <img src="http://placehold.it/150x100">
+          </figure>
+        </section>
+      </div>
+    </main>
+
+    <footer class="main-footer">
+      <section class="map">
+        <div class="container">
+          <section class="contacts">
+            <h4 class="contacts-title">Nёrds Design Studio</h4>
+            <p>
+              191186, Санкт-Петербург,<br>
+              ул. Б. Конюшенная, д. 19/8
+            </p>
+            <p>тел. +7 (812) 275-75-75</p>
+            <a class="btn" href="#">Напишите нам</a>
+          </section>
+        </div>
+      </section>
+
+      <section class="social">
+        <div class="container">
+          <a class="social-btn vk" href="#">Вконтакте</a>
+          <a class="social-btn fb" href="#">Фейсбук</a>
+          <a class="social-btn inst" href="#">Инстаграм</a>
+          <h2 class="social-title">Давайте дружить, это выгодно!</h2>
+          <p class="social-description">Скидка 10% для друзей из социальных сетей.</p>
+        </div>
+      </section>
+    </footer>
   </body>
 </html>
