Сверстал главную страницу и каталог

--- a/index.html
+++ b/index.html
@@ -23,22 +23,22 @@
         </div>
 
         <section class="promo">
-          <h1 class="promo-title">
+          <h1 class="title">
             Долго, дорого,<br>
             скрупулезно.
           </h1>
-          <p class="promo-description">
+          <p class="description">
             Математически выверенный дизайн<br>
             для вашего сайта или мобильного приложения.
           </p>
           <a class="btn" href="#">Узнать больше</a>
-          <section class="promo-slider">
-            <figure class="slider-pic">
+          <section class="slider">
+            <figure class="pic">
               <img src="http://placehold.it/150x100">
             </figure>
-            <button class="slider-btn"></button>
-            <button class="slider-btn"></button>
-            <button class="slider-btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
+            <button class="btn"></button>
           </section>
         </section>
       </div>
@@ -48,11 +48,11 @@
       <div class="container">
         <section class="features">
           <article class="feature-item">
-            <figure class="feature-pic">
+            <figure class="pic">
               <img src="http://placehold.it/150x100">
             </figure>
-            <h3 class="feature-title">Веб-сайты</h3>
-            <p class="feature-description">
+            <h3 class="title">Веб-сайты</h3>
+            <p class="description">
               Мир никогда не будет прежним<br>
               после того, как увидит ваш сайт!
             </p>
@@ -60,11 +60,11 @@
           </article>
 
           <article class="feature-item">
-            <figure class="feature-pic">
+            <figure class="pic">
               <img src="http://placehold.it/150x100">
             </figure>
-            <h3 class="feature-title">Приложения</h3>
-            <p class="feature-description">
+            <h3 class="title">Приложения</h3>
+            <p class="description">
               Покорите топ-10 приложений в<br>
               AppStore и Google Play
             </p>
@@ -72,11 +72,11 @@
           </article>
 
           <article class="feature-item">
-            <figure class="feature-pic">
+            <figure class="pic">
               <img src="http://placehold.it/150x100">
             </figure>
-            <h3 class="feature-title">Презентации</h3>
-            <p class="feature-description">
+            <h3 class="title">Презентации</h3>
+            <p class="description">
               Вы даже не подозреваете,<br>
               насколько вы изумительны!
             </p>
@@ -85,18 +85,18 @@
         </section>
 
         <section class="about">
-          <h2 class="about-title">
+          <h2 class="title">
             Мы - маленькая, но гордая<br>
             дизайн-студия из Краснодара.
           </h2>
-          <p class="about-description">
+          <p class="description">
             Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
             превыше креатива. Работаем не покладая рук, как роботы.
           </p>
 
           <section class="orders">
-            <h4 class="orders-title">Выполняем заказы на разработку:</h4>
-            <ul class="orders-list">
+            <h4 class="title">Выполняем заказы на разработку:</h4>
+            <ul>
               <li>Веб-сайтов любой сложности</li>
               <li>Мобильных приложений для iOS и Android</li>
               <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -104,11 +104,11 @@
           </section>
 
           <section class="strengths">
-            <figure class="strengths-pic">
+            <figure class="pic">
               <img src="http://placehold.it/150x100">
             </figure>
-            <h4 class="strengths-title">С 2004 года любим точность во всем:</h4>
-            <div class="strengths-item">
+            <h4 class="title">С 2004 года любим точность во всем:</h4>
+            <div class="item">
               <b>146%</b>
               <span>Уровень самоотдачи</span>
             </div>
@@ -124,16 +124,16 @@
         </section>
 
         <section class="clients">
-          <figure class="client-pic">
+          <figure class="pic">
             <img src="http://placehold.it/150x100">
           </figure>
-          <figure class="client-pic">
+          <figure class="pic">
             <img src="http://placehold.it/150x100">
           </figure>
-          <figure class="client-pic">
+          <figure class="pic">
             <img src="http://placehold.it/150x100">
           </figure>
-          <figure class="client-pic">
+          <figure class="pic">
             <img src="http://placehold.it/150x100">
           </figure>
         </section>
@@ -144,7 +144,7 @@
       <section class="map">
         <div class="container">
           <section class="contacts">
-            <h4 class="contacts-title">Nёrds Design Studio</h4>
+            <h4 class="title">Nёrds Design Studio</h4>
             <p>
               191186, Санкт-Петербург,<br>
               ул. Б. Конюшенная, д. 19/8
@@ -160,8 +160,8 @@
           <a class="social-btn vk" href="#">Вконтакте</a>
           <a class="social-btn fb" href="#">Фейсбук</a>
           <a class="social-btn inst" href="#">Инстаграм</a>
-          <h2 class="social-title">Давайте дружить, это выгодно!</h2>
-          <p class="social-description">Скидка 10% для друзей из социальных сетей.</p>
+          <h2 class="title">Давайте дружить, это выгодно!</h2>
+          <p class="description">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </section>
     </footer>
