--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <header class="main-header">
       <div class="container">
         <div class="header-top">
-          <figure class="logo">
-            <img src="http://placehold.it/150x100">
-          </figure>
+          <a class="logo" href="#">
+            <img src="http://placehold.it/150x100" alt="Логотип">
+          </a>
           <ul class="main-nav">
             <li><a href="#">Студия</a></li>
             <li><a href="#">Клиенты</a></li>
@@ -23,10 +23,10 @@
         </div>
 
         <section class="promo">
-          <h1 class="title">
+          <b class="slogan">
             Долго, дорого,<br>
             скрупулезно.
-          </h1>
+          </b>
           <p class="description">
             Математически выверенный дизайн<br>
             для вашего сайта или мобильного приложения.
@@ -34,7 +34,7 @@
           <a class="btn" href="#">Узнать больше</a>
           <section class="slider">
             <figure class="pic">
-              <img src="http://placehold.it/150x100">
+              <img src="http://placehold.it/150x100" alt="Изображение слайдера">
             </figure>
             <button class="btn"></button>
             <button class="btn"></button>
@@ -49,7 +49,7 @@
         <section class="features">
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100">
+              <img src="http://placehold.it/150x100" alt="Веб-сайты">
             </figure>
             <h3 class="title">Веб-сайты</h3>
             <p class="description">
@@ -61,7 +61,7 @@
 
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100">
+              <img src="http://placehold.it/150x100" alt="Приложения">
             </figure>
             <h3 class="title">Приложения</h3>
             <p class="description">
@@ -73,7 +73,7 @@
 
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100">
+              <img src="http://placehold.it/150x100" alt="Презентации">
             </figure>
             <h3 class="title">Презентации</h3>
             <p class="description">
@@ -85,10 +85,10 @@
         </section>
 
         <section class="about">
-          <h2 class="title">
+          <b class="slogan">
             Мы - маленькая, но гордая<br>
             дизайн-студия из Краснодара.
-          </h2>
+          </b>
           <p class="description">
             Исповедуем принципы минимализма и чистоты. Ставим математический расчет<br>
             превыше креатива. Работаем не покладая рук, как роботы.
@@ -96,7 +96,7 @@
 
           <section class="orders">
             <h4 class="title">Выполняем заказы на разработку:</h4>
-            <ul>
+            <ul class="list">
               <li>Веб-сайтов любой сложности</li>
               <li>Мобильных приложений для iOS и Android</li>
               <li>Слайдшоу и видео для корпоративных презентаций</li>
@@ -105,19 +105,19 @@
 
           <section class="strengths">
             <figure class="pic">
-              <img src="http://placehold.it/150x100">
+              <img src="http://placehold.it/150x100" alt="Студия Нёрдс">
             </figure>
             <h4 class="title">С 2004 года любим точность во всем:</h4>
-            <div class="item">
-              <b>146%</b>
+            <div class="strengths-item">
+              <b>146<sup>%</sup></b>
               <span>Уровень самоотдачи</span>
             </div>
             <div class="strengths-item">
-              <b>100%</b>
+              <b>100<sup>%</sup></b>
               <span>Соблюдение сроков</span>
             </div>
             <div class="strengths-item">
-              <b>50%</b>
+              <b>50<sup>%</sup></b>
               <span>Минимальная предоплата</span>
             </div>
           </section>
@@ -125,16 +125,16 @@
 
         <section class="clients">
           <figure class="pic">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="HTML Academy">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Barbershop Borodinski">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Pink">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100">
+            <img src="http://placehold.it/150x100" alt="Mishka">
           </figure>
         </section>
       </div>
@@ -149,7 +149,7 @@
               191186, Санкт-Петербург,<br>
               ул. Б. Конюшенная, д. 19/8
             </p>
-            <p>тел. +7 (812) 275-75-75</p>
+            <p>тел. <a href="tel:+781227575">+7 (812) 275-75-75</a></p>
             <a class="btn" href="#">Напишите нам</a>
           </section>
         </div>
@@ -160,7 +160,7 @@
           <a class="social-btn vk" href="#">Вконтакте</a>
           <a class="social-btn fb" href="#">Фейсбук</a>
           <a class="social-btn inst" href="#">Инстаграм</a>
-          <h2 class="title">Давайте дружить, это выгодно!</h2>
+          <b class="slogan">Давайте дружить, это выгодно!</b>
           <p class="description">Скидка 10% для друзей из социальных сетей.</p>
         </div>
       </section>
