--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <body>
     <header class="main-header">
       <div class="container">
-        <div class="header-top">
+        <nav class="header-top">
           <a class="logo" href="#">
             <img src="http://placehold.it/150x100" alt="Логотип">
           </a>
@@ -20,7 +20,7 @@
           <div class="shopping-cart">
             <a href="#">Корзина</a>
           </div>
-        </div>
+        </nav>
 
         <section class="promo">
           <b class="slogan">
