Добавил картинки и стили текста

--- a/catalog.html
+++ b/catalog.html
@@ -9,7 +9,7 @@
       <div class="container">
         <nav class="header-top">
           <a class="logo" href="#">
-            <img src="http://placehold.it/150x100" alt="Логотип">
+            <img src="img/header-logo.png" width="160" height="65" alt="Логотип">
           </a>
           <ul class="main-nav">
             <li><a href="#">Студия</a></li>
@@ -101,7 +101,7 @@
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет Sedona">
+              <img src="img/img-sedona.jpg" width="360" height="576" alt="Макет Sedona">
             </figure>
             <h3 class="title">Sedona</h3>
             <p class="description">
@@ -113,31 +113,31 @@
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет Pink">
+              <img src="img/img-pink.jpg" width="360" height="576" alt="Макет Pink">
             </figure>
           </article>
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет Barbershop">
+              <img src="img/img-barbershop.jpg" width="360" height="576" alt="Макет Barbershop">
             </figure>
           </article>
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет Mishka">
+              <img src="img/img-mishka.jpg" width="360" height="576" alt="Макет Mishka">
             </figure>
           </article>
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет A+">
+              <img src="img/img-aplus.jpg" width="360" height="576" alt="Макет A+">
             </figure>
           </article>
 
           <article class="catalog-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Макет Кваст">
+              <img src="img/img-kvast.jpg" width="360" height="576" alt="Макет Кваст">
             </figure>
           </article>
         </section>
