--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       <div class="container">
         <nav class="header-top">
           <a class="logo" href="#">
-            <img src="http://placehold.it/150x100" alt="Логотип">
+            <img src="img/header-logo.png" width="160" height="65" alt="Логотип">
           </a>
           <ul class="main-nav">
             <li><a href="#">Студия</a></li>
@@ -34,7 +34,7 @@
           <a class="btn" href="#">Узнать больше</a>
           <section class="slider">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Изображение слайдера">
+              <img src="img/slide1.png" width="698" height="413" alt="Изображение слайдера">
             </figure>
             <button class="btn"></button>
             <button class="btn"></button>
@@ -49,7 +49,7 @@
         <section class="features">
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Веб-сайты">
+              <img src="img/illustration-1.jpg" width="300" height="146" alt="Веб-сайты">
             </figure>
             <h3 class="title">Веб-сайты</h3>
             <p class="description">
@@ -61,7 +61,7 @@
 
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Приложения">
+              <img src="img/illustration-2.jpg" width="300" height="146" alt="Приложения">
             </figure>
             <h3 class="title">Приложения</h3>
             <p class="description">
@@ -73,7 +73,7 @@
 
           <article class="feature-item">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Презентации">
+              <img src="img/illustration-3.jpg" width="300" height="146" alt="Презентации">
             </figure>
             <h3 class="title">Презентации</h3>
             <p class="description">
@@ -105,7 +105,7 @@
 
           <section class="strengths">
             <figure class="pic">
-              <img src="http://placehold.it/150x100" alt="Студия Нёрдс">
+              <img src="img/nerds-illustration.jpg" width="360" height="208" alt="Студия Нёрдс">
             </figure>
             <h4 class="title">С 2004 года любим точность во всем:</h4>
             <div class="strengths-item">
@@ -125,16 +125,16 @@
 
         <section class="clients">
           <figure class="pic">
-            <img src="http://placehold.it/150x100" alt="HTML Academy">
+            <img src="img/logo-1.png" width="199" height="68" alt="HTML Academy">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100" alt="Barbershop Borodinski">
+            <img src="img/logo-2.png" width="209" height="90" alt="Barbershop Borodinski">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100" alt="Pink">
+            <img src="img/logo-3.png" width="185" height="52" alt="Pink">
           </figure>
           <figure class="pic">
-            <img src="http://placehold.it/150x100" alt="Mishka">
+            <img src="img/logo-4.png" width="173" height="84" alt="Mishka">
           </figure>
         </section>
       </div>
